added description on profile page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     
     <!-- Dynamisk base-URL for å håndtere riktig sti for GitHub Pages -->
     <base href="/" />
-    
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/icon-192x192.png" sizes="192x192" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Booking page</title>
   </head>
